# api/models/user.go
@@ -6,9 +6,7 @@ type LoginUser struct {
 }
 
 type CheckEmail struct {
-	FirstName string `json:"first_name"`
-	LastName  string `json:"last_name"`
-	Email     string `json:"email"`
+	Email string `json:"email"`
 }
 
 type CheckCode struct {
